--- a/Jungle-Academy/level2-memo/assets/memo.scss
+++ b/Jungle-Academy/level2-memo/assets/memo.scss
@@ -168,13 +168,13 @@ section.memo-show {
     // &[open] memo-write memo-body와 동일하게
 
 
-    &:hover {
-      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), 0 3px 3px rgba(0, 0, 0, 0.1);
+    // &:hover {
+    //   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), 0 3px 3px rgba(0, 0, 0, 0.1);
       
-      #fixed-icon, div.memo-mid-icons {
-        display: inline-block;
-      }
-    }
+    //   #fixed-icon, div.memo-mid-icons {
+    //     display: inline-block;
+    //   }
+    // }
 
     a.input-icon {
       color: gray;
