--- a/Jungle-Academy/level2-memo/assets/memo.css
+++ b/Jungle-Academy/level2-memo/assets/memo.css
@@ -152,11 +152,23 @@ section.memo-show .no-memo i {
 section.memo-show .memo-body {
   margin: 20px auto;
   width: 300px;
+  max-width: calc(100% - 40px);
   height: 125px;
   border: 1px solid #c4c4c4;
   border-radius: 10px;
-  -webkit-transition: all 3s;
-  transition: all 3s;
+  -webkit-transition: -webkit-box-shadow .5s;
+  transition: -webkit-box-shadow .5s;
+  transition: box-shadow .5s;
+  transition: box-shadow .5s, -webkit-box-shadow .5s;
+}
+
+section.memo-show .memo-body:hover, section.memo-show .memo-body[hover] {
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), 0 3px 3px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), 0 3px 3px rgba(0, 0, 0, 0.1);
+}
+
+section.memo-show .memo-body:hover #fixed-icon, section.memo-show .memo-body:hover div.memo-mid-icons, section.memo-show .memo-body[hover] #fixed-icon, section.memo-show .memo-body[hover] div.memo-mid-icons {
+  display: inline-block;
 }
 
 section.memo-show .memo-body a.input-icon {
@@ -198,6 +210,7 @@ section.memo-show .memo-body .memo-description, section.memo-show .memo-body .me
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   outline: none;
+  background: none;
 }
 
 section.memo-show .memo-body .memo-title {
