--- a/Jungle-Academy/level2-memo/assets/memo.css
+++ b/Jungle-Academy/level2-memo/assets/memo.css
@@ -39,7 +39,6 @@ section.memo-write .memo-body a.input-icon {
 }
 
 section.memo-write .memo-body a.input-icon div.upload-tooltip {
-  display: none;
   font-size: 12px;
   position: absolute;
   top: 100%;
@@ -52,10 +51,6 @@ section.memo-write .memo-body a.input-icon div.upload-tooltip {
   padding: 5px 10px;
   white-space: nowrap;
   line-height: initial;
-}
-
-section.memo-write .memo-body a.input-icon:hover div.upload-tooltip {
-  display: inline-block;
 }
 
 section.memo-write .memo-body a.input-icon-l {
@@ -156,10 +151,10 @@ section.memo-show .memo-body {
   height: 125px;
   border: 1px solid #c4c4c4;
   border-radius: 10px;
-  -webkit-transition: -webkit-box-shadow .5s;
-  transition: -webkit-box-shadow .5s;
-  transition: box-shadow .5s;
-  transition: box-shadow .5s, -webkit-box-shadow .5s;
+  -webkit-transition: opacity 1s, -webkit-box-shadow .3s;
+  transition: opacity 1s, -webkit-box-shadow .3s;
+  transition: box-shadow .3s, opacity 1s;
+  transition: box-shadow .3s, opacity 1s, -webkit-box-shadow .3s;
 }
 
 section.memo-show .memo-body:hover, section.memo-show .memo-body[hover] {
@@ -167,11 +162,16 @@ section.memo-show .memo-body:hover, section.memo-show .memo-body[hover] {
           box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), 0 3px 3px rgba(0, 0, 0, 0.1);
 }
 
-section.memo-show .memo-body:hover #fixed-icon, section.memo-show .memo-body:hover div.memo-mid-icons, section.memo-show .memo-body[hover] #fixed-icon, section.memo-show .memo-body[hover] div.memo-mid-icons {
-  display: inline-block;
+section.memo-show .memo-body:hover #fixed-icon, section.memo-show .memo-body[hover] #fixed-icon {
+  opacity: 1;
+}
+
+section.memo-show .memo-body:hover div.memo-mid-icons a.input-icon, section.memo-show .memo-body[hover] div.memo-mid-icons a.input-icon {
+  opacity: 1;
 }
 
 section.memo-show .memo-body a.input-icon {
+  opacity: 0;
   color: gray;
   font-size: 20px;
   text-decoration: none;
@@ -180,7 +180,6 @@ section.memo-show .memo-body a.input-icon {
 }
 
 section.memo-show .memo-body a.input-icon div.upload-tooltip {
-  display: none;
   font-size: 12px;
   position: absolute;
   top: 100%;
@@ -193,10 +192,6 @@ section.memo-show .memo-body a.input-icon div.upload-tooltip {
   padding: 5px 10px;
   white-space: nowrap;
   line-height: initial;
-}
-
-section.memo-show .memo-body a.input-icon:hover div.upload-tooltip {
-  display: inline-block;
 }
 
 section.memo-show .memo-body .memo-description, section.memo-show .memo-body .memo-title {
@@ -222,7 +217,7 @@ section.memo-show .memo-body .blind-sec {
 }
 
 section.memo-show .memo-body .blind-sec #fixed-icon {
-  display: none;
+  opacity: 0;
   line-height: 40px;
   position: absolute;
   right: 30px;
@@ -234,6 +229,26 @@ section.memo-show .memo-body div.memo-front-icons {
 }
 
 section.memo-show .memo-body div.memo-mid-icons {
+  width: 100%;
+  text-align: center;
+  margin-top: 5px;
+}
+
+section.memo-show .memo-body div.memo-mid-icons a.input-icon {
+  opacity: 0;
+  display: inline-block;
+  text-align: center;
+  width: 15%;
+  margin: 0;
+}
+
+section.memo-show .memo-body div.memo-mid-icons a.input-icon i {
+  color: #3E3E3E;
+  font-size: 15px;
+  line-height: 27px;
+}
+
+section.memo-show .memo-body div.memo-mid-icons a.input-icon-l {
   display: none;
 }
 
