--- a/Jungle-Academy/portfolio1/css/index.scss
+++ b/Jungle-Academy/portfolio1/css/index.scss
@@ -2,6 +2,7 @@ html {
   width: 100%;
   height: 100%;
 }
+
 body {
   width: 100%;
   height: 100%;
@@ -12,7 +13,7 @@ section#main-door {
   position: fixed;
   width: 100%;
   height: 100%;
-  
+
   .left-door{
     position: absolute;
     width: 50%;
@@ -22,7 +23,7 @@ section#main-door {
     right: auto;
     bottom: 0;
     background-color: #CEE9F6;
-    background-image: url(/Jungle-Academy/portfolio1/img/main/img_smart_intro01.jpg);
+    background-image: url(../img/main/img_smart_intro01.jpg);
     background-repeat: no-repeat;
     transition: left .5s;
   }
@@ -36,7 +37,7 @@ section#main-door {
     right: auto;
     bottom: 0;
     background-color: #CEE9F6;
-    background-image: url(/Jungle-Academy/portfolio1/img/main/img_smart_intro01.jpg);
+    background-image: url(../img/main/img_smart_intro01.jpg);
     background-repeat: no-repeat;
     transition: left .5s;
   }
@@ -49,69 +50,51 @@ section#main-door {
       left:50%;
     }
   }
-  
-}
 
-main {
-
-  
-}
-
-header {
-  display: none;
-
-  //parants영역
-  menu.tnbParents {
-    background-color: #1E75A8;
-    color: #FFFFFF;
-
-    .parentsSection {
-
-      a {//after로 '<' 넣어주기
-      }
-    }
-  }
-
-
-
-  //students영역
-  menu.tnbStudents {
-    background-color: #E2487E;
-    color: #FFFFFF;
-  }
-
-
-
-
-
-
-
-
-  //class id
-  div.btnBox {
-
-    a{ 
-      color: #BBD5E5;
-      text-decoration: none; 
-    } 
-  }
-
-  a.headerLogo, h2.headerLogo {
-    color: #FFFFFF;
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: bold;
-    width: 95px;
+  .door-top-logo { //효과 넣어야함
+    position: absolute;
+    top: 10%;
+    right: 50%; //50%했는데 가운데로 안감
+    transform: translateX(50%);
+    display: block;
+    background-image: url(../img/main/img_logo.png);
+    background-repeat: no-repeat;
+    width: 180px;
     height: 80px;
-    letter-spacing: 16px;
-    vertical-align: 80px;
-    line-height: 26.6666px;
-    margin: 0;
   }
 
-  tnb {
-    background: yellow;
-    color: black;
+    .top-text {
+      width: 50%;
+      height: 80%;
+      background-image: url(/Practice-2019/Jungle-Academy/portfolio1/img/main/img_intro_txt_l.png);
+      background-repeat: no-repeat;
+      background-position: 100% 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+      transition: background-position 1s;
+    }
+
+    .bottom-text {
+      width: 50%;
+      height: 41.2%;
+      background-image: url(/Practice-2019/Jungle-Academy/portfolio1/img/main/img_intro_txt_r.png);
+      background-repeat: no-repeat;
+      background-position: 0 100%;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      transition: background-position 1s;
+    }
+  
+
+  &.banner-active {
+    .top-text {
+      background-position: 100% 100%;
+    }
+    .bottom-text {
+      background-position: 0 0;
+    }
   }
 
 }
