--- a/Jungle-Academy/portfolio1/css/index.css
+++ b/Jungle-Academy/portfolio1/css/index.css
@@ -67,36 +67,34 @@ section#main-door .door-top-logo {
 }
 
 section#main-door .top-text {
+  position: absolute;
+  top: -25%;
+  left: 25.3%;
   width: 50%;
-  height: 80%;
+  height: 100%;
   background-image: url(/Practice-2019/Jungle-Academy/portfolio1/img/main/img_intro_txt_l.png);
   background-repeat: no-repeat;
-  background-position: 100% 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  -webkit-transition: background-position 1s;
-  transition: background-position 1s;
+  -webkit-transition: top 1s;
+  transition: top 1s;
 }
 
 section#main-door .bottom-text {
+  position: absolute;
+  left: 50%;
+  top: 100%;
   width: 50%;
-  height: 41.2%;
+  height: 100%;
   background-image: url(/Practice-2019/Jungle-Academy/portfolio1/img/main/img_intro_txt_r.png);
   background-repeat: no-repeat;
-  background-position: 0 100%;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  -webkit-transition: background-position 1s;
-  transition: background-position 1s;
+  -webkit-transition: top 1s;
+  transition: top 1s;
 }
 
 section#main-door.banner-active .top-text {
-  background-position: 100% 100%;
+  top: 50%;
 }
 
 section#main-door.banner-active .bottom-text {
-  background-position: 0 0;
+  top: 50%;
 }
 /*# sourceMappingURL=index.css.map */
