--- a/Jungle-Academy/portfolio1/css/main.css
+++ b/Jungle-Academy/portfolio1/css/main.css
@@ -1,122 +1,1 @@
-html {
-  background: silver;
-  width: 100%;
-  height: 100%;
-}
-
-html body {
-  background: #BBD5E5;
-  margin: 0;
-  height: 100%;
-}
-
-html body header {
-  margin: 0;
-  height: 100%;
-}
-
-nav.gnb {
-  position: relative;
-  height: 100%;
-}
-
-nav.gnb .gnb-menu {
-  position: absolute;
-  left: 92.5%;
-  height: 100%;
-}
-
-nav.gnb .gnb-menu a.blue-gnb, nav.gnb .gnb-menu a.pink-gnb {
-  display: block;
-  cursor: pointer;
-}
-
-nav.gnb .gnb-menu a.blue-gnb span, nav.gnb .gnb-menu a.pink-gnb span {
-  display: inline-block;
-  margin: 150px 10px;
-  letter-spacing: 6px;
-  font-size: 20px;
-  font-weight: bold;
-  text-align: center;
-  color: #FFFFFF;
-  line-height: 1.5em;
-}
-
-nav.gnb .gnb-menu a.blue-gnb {
-  background-color: #1573AA;
-  height: 50%;
-}
-
-nav.gnb .gnb-menu a.pink-gnb {
-  background-color: #E7437D;
-  height: 50%;
-}
-
-section div.btnBox {
-  height: 75px;
-  margin-top: 50px;
-  margin-right: 100px;
-  float: right;
-}
-
-section div.btnBox a {
-  vertical-align: top;
-  display: inline-block;
-  font-size: 15px;
-  font-weight: bold;
-  color: #BBD5E5;
-  text-decoration: none;
-  margin: 3px 10px;
-}
-
-section div.btnBox a.closeBtn {
-  width: 25px;
-  margin: 0 0 0 30px;
-}
-
-section div.btnBox a.closeBtn img {
-  width: 100%;
-}
-
-section h2.headerLogo {
-  left: 45px;
-  word-spacing: 10px;
-  font-size: 28px;
-  font-weight: bold;
-  text-align: center;
-  line-height: 1.7em;
-  float: left;
-  margin: 0;
-}
-
-section .menu-body {
-  overflow: hidden;
-  height: 100%;
-}
-
-section .main-body {
-  margin: 0 40px;
-  clear: both;
-  overflow: hidden;
-}
-
-section .main-body .gnbMenu {
-  float: right;
-  width: 89%;
-  margin: 0 auto;
-}
-
-section#blue-menu {
-  width: 92.5%;
-  height: 100%;
-  background-color: #1E75A8;
-  color: #FFFFFF;
-}
-
-section#pink-menu {
-  width: 92.5%;
-  height: 100%;
-  background-color: #E7437D;
-  color: #FFFFFF;
-}
-/*# sourceMappingURL=main.css.map */
+/* No CSS *//*# sourceMappingURL=main.css.map */
