--- a/Jungle-Academy/portfolio1/css/main.css
+++ b/Jungle-Academy/portfolio1/css/main.css
@@ -1,1 +1,233 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+html {
+  width: 100%;
+  height: 100%;
+}
+
+html > body {
+  margin: 0;
+  height: 100%;
+}
+
+html > body > header {
+  margin: 0;
+  height: 100%;
+}
+
+html > body > header > nav.gnb {
+  height: 100%;
+}
+
+html > body > header > nav.gnb > section {
+  background: silver;
+  width: 92.5%;
+  height: 100%;
+  color: #FFFFFF;
+}
+
+html > body > header > nav.gnb > section > .menu-body {
+  overflow: hidden;
+  height: 100%;
+}
+
+nav.gnb {
+  position: relative;
+}
+
+nav.gnb > .gnb-menu {
+  position: absolute;
+  width: 100%;
+  left: 92.5%;
+  height: 100%;
+  z-index: 999;
+}
+
+nav.gnb > .gnb-menu a#blue-gnb, nav.gnb > .gnb-menu a#pink-gnb {
+  display: block;
+  height: 50%;
+  cursor: pointer;
+}
+
+nav.gnb > .gnb-menu a#blue-gnb span, nav.gnb > .gnb-menu a#pink-gnb span {
+  display: inline-block;
+  width: 84px;
+  letter-spacing: 6px;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  color: #FFFFFF;
+  line-height: 1.5em;
+}
+
+nav.gnb > .gnb-menu a#blue-gnb {
+  background-color: #1573AA;
+}
+
+nav.gnb > .gnb-menu a#pink-gnb {
+  background-color: #E7437D;
+}
+
+nav.gnb > section .btnBox {
+  height: 75px;
+  margin-top: 50px;
+  margin-right: 100px;
+  float: right;
+}
+
+nav.gnb > section .btnBox > a {
+  vertical-align: top;
+  display: inline-block;
+  font-size: 15px;
+  font-weight: bold;
+  color: #BBD5E5;
+  text-decoration: none;
+  margin: 3px 10px;
+}
+
+nav.gnb > section .btnBox > a.closeBtn {
+  width: 30px;
+  margin: 0 0 0 35px;
+}
+
+nav.gnb > section .btnBox > a.closeBtn > img {
+  width: 100%;
+}
+
+nav.gnb > section .main-body {
+  height: 61%;
+  margin: 0 40px;
+  clear: both;
+}
+
+nav.gnb > section .main-body > h2.headerLogo {
+  left: 45px;
+  word-spacing: 8px;
+  font-size: 28px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 1.7em;
+  float: left;
+  margin: 0;
+}
+
+nav.gnb > section .main-body > .gnbMenu {
+  height: 100%;
+  float: right;
+  width: 89%;
+  margin: 0 auto;
+  overflow: auto;
+}
+
+nav.gnb > section .main-body > .gnbMenu > ul {
+  display: inline-block;
+  width: 21.8%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: 1px solid white;
+  vertical-align: top;
+  margin-top: 0;
+  margin-right: 35px;
+}
+
+nav.gnb > section .main-body > .gnbMenu > ul h3, nav.gnb > section .main-body > .gnbMenu > ul p, nav.gnb > section .main-body > .gnbMenu > ul li {
+  letter-spacing: -1px;
+}
+
+nav.gnb > section .main-body > .gnbMenu > ul h3 {
+  font-size: 1.3em;
+  margin-top: 30px;
+}
+
+nav.gnb > section .main-body > .gnbMenu > ul p {
+  font-size: 12px;
+  line-height: 1.5em;
+  margin-top: 0;
+}
+
+nav.gnb > section .main-body > .gnbMenu > ul span {
+  display: block;
+  width: 55px;
+  height: 1px;
+  margin: 25px 0;
+  border-bottom: 1px solid white;
+  opacity: 0.3;
+}
+
+nav.gnb > section .main-body > .gnbMenu > ul > li.contentsList {
+  list-style: none;
+}
+
+nav.gnb > section .main-body > .gnbMenu > ul > li.contentsList > a.insideList {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 0.8em;
+  color: white;
+  line-height: 2em;
+  padding-left: 10px;
+  background-image: url(/Practice-2019/Jungle-Academy/portfolio1/img/bg_hmenu_sub_a.png);
+  background-repeat: no-repeat;
+  background-position: 0 11px;
+}
+
+nav.gnb > section .main-body > .gnbMenu > ul > li.contentsList > a.insideList:hover {
+  color: #FFFE8E;
+}
+
+nav.gnb > section .main-body > .gnbMenu ul.contents-top {
+  min-height: 280px;
+}
+
+nav.gnb > section .main-body > .gnbMenu ul.contents-buttom {
+  margin-top: 15px;
+  min-height: 340px;
+}
+
+nav.gnb > section div.snb {
+  margin-top: 60px;
+  overflow: hidden;
+}
+
+nav.gnb > section div.snb > .snb-center {
+  width: 440px;
+  margin-left: 38.5%;
+  overflow: hidden;
+  float: left;
+}
+
+nav.gnb > section div.snb > .snb-center > a.snb-btn {
+  display: block;
+  float: left;
+  width: 20%;
+  text-align: center;
+  text-decoration: none;
+}
+
+nav.gnb > section div.snb a.snb-right-btn {
+  display: block;
+  float: right;
+  margin-right: 100px;
+}
+
+nav.gnb > section#blue-menu {
+  position: absolute;
+  left: 100%;
+  background-color: #1E75A8;
+  -webkit-transition: left .5s;
+  transition: left .5s;
+}
+
+nav.gnb > section#blue-menu.menu-active {
+  left: 0;
+}
+
+nav.gnb > section#pink-menu {
+  position: absolute;
+  left: 100%;
+  background-color: #E7437D;
+  -webkit-transition: left .5s;
+  transition: left .5s;
+}
+
+nav.gnb > section#pink-menu.menu-active {
+  left: 0;
+}
+/*# sourceMappingURL=main.css.map */
