--- a/Jungle-Academy/portfolio1/css/main.scss
+++ b/Jungle-Academy/portfolio1/css/main.scss
@@ -17,9 +17,9 @@ html {
         // background: silver;
         height: 100%;
 
-        >section {
-          background: silver;
-          width: 92.5%;
+        >div.menu {
+          // background: silver;
+          // width: 92.5%;
           height: 100%;
           color: #FFFFFF;
 
@@ -38,11 +38,12 @@ nav.gnb {
   position: relative;
 
   >.gnb-menu {
-    position: absolute;
-    width: 100%;
-    left: 92.5%;
+    position: fixed;
+    width: 120px;
+    right: 0;
+    left: auto;
     height: 100%;
-    z-index: 999;
+    z-index: 999; //z-index 를 999를 주는이유
 
     a#blue-gnb, a#pink-gnb {
       display: block;
@@ -74,7 +75,8 @@ nav.gnb {
     }
   }
 
-  >section {
+  >div.menu {
+    
     .btnBox {
       height: 75px;
       margin-top: 50px;
@@ -216,7 +218,7 @@ nav.gnb {
     }
   }
   
-  >section#blue-menu {
+  >div.menu.parents {
     position: absolute;
     left: 100%;
     background-color: #1E75A8;
@@ -227,7 +229,7 @@ nav.gnb {
     }
   }
 
-  >section#pink-menu {
+  >div.menu.students {
     position: absolute;
     left: 100%;
     background-color: #E7437D;
