--- a/Jungle-Academy/portfolio1/css/index.css
+++ b/Jungle-Academy/portfolio1/css/index.css
@@ -97,4 +97,12 @@ section#main-door.banner-active .banner-text-l {
 section#main-door.banner-active .banner-text-r {
   top: 50%;
 }
+
+section#main-door.banner-move .banner-text-l {
+  top: 15%;
+}
+
+section#main-door.banner-move .banner-text-r {
+  top: 15%;
+}
 /*# sourceMappingURL=index.css.map */
