--- a/Jungle-Academy/portfolio1/css/main.css
+++ b/Jungle-Academy/portfolio1/css/main.css
@@ -18,7 +18,7 @@ html > body > header > nav.gnb {
 }
 
 html > body > header > nav.gnb > div.menu {
-  width: 92.5%;
+  width: 100%;
   height: 100%;
   color: #FFFFFF;
 }
@@ -71,9 +71,11 @@ nav.gnb > .gnb-menu a#pink-gnb {
 }
 
 nav.gnb > div.menu .btnBox {
-  height: 75px;
-  margin-top: 50px;
-  margin-right: 100px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  height: 130px;
+  padding-top: 50px;
+  margin-right: 200px;
   float: right;
 }
 
@@ -84,12 +86,13 @@ nav.gnb > div.menu .btnBox > a {
   font-weight: bold;
   color: #BBD5E5;
   text-decoration: none;
-  margin: 3px 10px;
+  margin-top: 3px;
+  margin-left: 30px;
 }
 
 nav.gnb > div.menu .btnBox > a.closeBtn {
   width: 30px;
-  margin: 0 0 0 35px;
+  margin: 0 0 0 40px;
 }
 
 nav.gnb > div.menu .btnBox > a.closeBtn > img {
@@ -97,18 +100,17 @@ nav.gnb > div.menu .btnBox > a.closeBtn > img {
 }
 
 nav.gnb > div.menu .main-body {
-  height: 61%;
-  margin: 0 40px;
+  height: 480px;
+  margin: 0 180px 0 40px;
   clear: both;
 }
 
 nav.gnb > div.menu .main-body > h2.headerLogo {
-  left: 45px;
-  word-spacing: 8px;
   font-size: 28px;
   font-weight: bold;
   text-align: center;
   line-height: 1.7em;
+  word-spacing: 7px;
   float: left;
   margin: 0;
 }
@@ -116,20 +118,20 @@ nav.gnb > div.menu .main-body > h2.headerLogo {
 nav.gnb > div.menu .main-body > .gnbMenu {
   height: 100%;
   float: right;
-  width: 89%;
+  width: 1230px;
   margin: 0 auto;
   overflow: auto;
 }
 
 nav.gnb > div.menu .main-body > .gnbMenu > ul {
-  display: inline-block;
-  width: 21.8%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  display: inline-block;
+  width: 270px;
   border: 1px solid white;
   vertical-align: top;
   margin-top: 0;
-  margin-right: 35px;
+  margin-right: 28px;
 }
 
 nav.gnb > div.menu .main-body > .gnbMenu > ul h3, nav.gnb > div.menu .main-body > .gnbMenu > ul p, nav.gnb > div.menu .main-body > .gnbMenu > ul li {
@@ -177,22 +179,22 @@ nav.gnb > div.menu .main-body > .gnbMenu > ul > li.contentsList > a.insideList:h
 }
 
 nav.gnb > div.menu .main-body > .gnbMenu ul.contents-top {
-  min-height: 280px;
+  min-height: 285px;
 }
 
 nav.gnb > div.menu .main-body > .gnbMenu ul.contents-buttom {
-  margin-top: 15px;
+  margin-top: 30px;
   min-height: 340px;
 }
 
 nav.gnb > div.menu div.snb {
-  margin-top: 60px;
+  margin-top: 50px;
   overflow: hidden;
 }
 
 nav.gnb > div.menu div.snb > .snb-center {
-  width: 440px;
-  margin-left: 38.5%;
+  width: 410px;
+  margin-left: 590px;
   overflow: hidden;
   float: left;
 }
@@ -201,14 +203,13 @@ nav.gnb > div.menu div.snb > .snb-center > a.snb-btn {
   display: block;
   float: left;
   width: 20%;
-  text-align: center;
   text-decoration: none;
 }
 
 nav.gnb > div.menu div.snb a.snb-right-btn {
   display: block;
   float: right;
-  margin-right: 100px;
+  margin-right: 200px;
 }
 
 nav.gnb > div.menu.parents {
