--- a/Jungle-Academy/portfolio1/css/main.scss
+++ b/Jungle-Academy/portfolio1/css/main.scss
@@ -43,7 +43,8 @@ nav.gnb {
     right: 0;
     left: auto;
     height: 100%;
-    z-index: 999; //z-index 를 999를 주는이유
+    z-index: 999; 
+    //z-index 를 999를 주는이유
 
     a#blue-gnb, a#pink-gnb {
       display: block;
