--- a/Jungle-Academy/level2-memo/assets/memo.css
+++ b/Jungle-Academy/level2-memo/assets/memo.css
@@ -151,10 +151,10 @@ section.memo-show .memo-body {
   height: 125px;
   border: 1px solid #c4c4c4;
   border-radius: 10px;
-  -webkit-transition: opacity 1s, -webkit-box-shadow .3s;
-  transition: opacity 1s, -webkit-box-shadow .3s;
-  transition: box-shadow .3s, opacity 1s;
-  transition: box-shadow .3s, opacity 1s, -webkit-box-shadow .3s;
+  -webkit-transition: -webkit-box-shadow .5s;
+  transition: -webkit-box-shadow .5s;
+  transition: box-shadow .5s;
+  transition: box-shadow .5s, -webkit-box-shadow .5s;
 }
 
 section.memo-show .memo-body:hover, section.memo-show .memo-body[hover] {
@@ -162,7 +162,7 @@ section.memo-show .memo-body:hover, section.memo-show .memo-body[hover] {
           box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), 0 3px 3px rgba(0, 0, 0, 0.1);
 }
 
-section.memo-show .memo-body:hover #fixed-icon, section.memo-show .memo-body[hover] #fixed-icon {
+section.memo-show .memo-body:hover div.memo-mid-icons, section.memo-show .memo-body[hover] div.memo-mid-icons {
   opacity: 1;
 }
 
@@ -243,7 +243,6 @@ section.memo-show .memo-body div.memo-mid-icons a.input-icon {
 }
 
 section.memo-show .memo-body div.memo-mid-icons a.input-icon i {
-  color: #3E3E3E;
   font-size: 15px;
   line-height: 27px;
 }
