--- a/Jungle-Academy/portfolio1/css/index.scss
+++ b/Jungle-Academy/portfolio1/css/index.scss
@@ -51,16 +51,30 @@ section#main-door {
     }
   }
 
-  .logo { //효과 넣어야함
+  @keyframes logo { //효과 적용안됌
+    from {width:0; height:0;}
+    to {width: 100%; height: 100%;}
+  }
+
+  .logo {
     position: absolute;
     top: 5%;
     left: 50%;
+    background-image: url(img/hero/img_logo.png);
+    background-repeat: no-repeat;
     transform: translateX(-50%);
     display: block;
-    background-image: url(../img/main/img_logo.png);
-    background-repeat: no-repeat;
     width: 180px;
     height: 80px;
+
+    // &:before {
+    //   content: url(img/hero/img_logo.png);
+    //   display: block;
+    //   animation-name: logo;
+    //   animation-duration: .5s;
+    //   width: 0px;
+    //   height: 0px;
+    // }
   }
 
   .banner-text-l {
