--- a/Jungle-Academy/portfolio1/css/main.css
+++ b/Jungle-Academy/portfolio1/css/main.css
@@ -6,6 +6,7 @@ html {
 html > body {
   margin: 0;
   height: 100%;
+  overflow: hidden;
 }
 
 html > body > header {
@@ -84,7 +85,8 @@ nav.gnb > div.menu .btnBox > a {
   display: inline-block;
   font-size: 15px;
   font-weight: bold;
-  color: #BBD5E5;
+  color: #eee;
+  opacity: 0.8;
   text-decoration: none;
   margin-top: 3px;
   margin-left: 30px;
