--- a/Jungle-Academy/portfolio1/css/main.scss
+++ b/Jungle-Academy/portfolio1/css/main.scss
@@ -7,6 +7,7 @@ html {
     // background: silver;
     margin: 0;
     height: 100%;
+    overflow: hidden;
 
     >header {
       // background: silver;
@@ -90,7 +91,8 @@ nav.gnb {
         display: inline-block;
         font-size: 15px;
         font-weight: bold;
-        color: #BBD5E5;
+        color: #eee;
+        opacity: 0.8;
         text-decoration: none;
         margin-top: 3px;
         margin-left: 30px;
