--- a/Jungle-Academy/portfolio1/css/index.css
+++ b/Jungle-Academy/portfolio1/css/index.css
@@ -55,23 +55,19 @@ section#main-door.door-active .right-door {
 
 @-webkit-keyframes logo {
   from {
-    width: 0;
-    height: 0;
+    width: 0%;
   }
   to {
     width: 100%;
-    height: 100%;
   }
 }
 
 @keyframes logo {
   from {
-    width: 0;
-    height: 0;
+    width: 0%;
   }
   to {
     width: 100%;
-    height: 100%;
   }
 }
 
@@ -79,8 +75,6 @@ section#main-door .logo {
   position: absolute;
   top: 5%;
   left: 50%;
-  background-image: url(img/hero/img_logo.png);
-  background-repeat: no-repeat;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   display: block;
@@ -88,43 +82,80 @@ section#main-door .logo {
   height: 80px;
 }
 
-section#main-door .banner-text-l {
-  position: absolute;
-  top: -25%;
-  left: 25.3%;
-  width: 50%;
-  height: 100%;
-  background-image: url(/Practice-2019/Jungle-Academy/portfolio1/img/main/img_intro_txt_l.png);
-  background-repeat: no-repeat;
-  -webkit-transition: top 1s;
-  transition: top 1s;
+section#main-door .logo:after {
+  content: url(../img/hero/img_logo.png);
+  display: block;
+  overflow: hidden;
+  -webkit-animation-name: logo;
+          animation-name: logo;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
-section#main-door .banner-text-r {
+section#main-door .text-banner {
   position: absolute;
+  top: 40%;
   left: 50%;
-  top: 100%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 792px;
+  height: 162px;
+  -webkit-transition: top 1s;
+  transition: top 1s;
+}
+
+section#main-door .text-banner .banner-text-l {
+  position: absolute;
+  top: -1500px;
+  left: 0px;
   width: 50%;
   height: 100%;
-  background-image: url(/Practice-2019/Jungle-Academy/portfolio1/img/main/img_intro_txt_r.png);
+  background-image: url(../img/main/img_intro_txt_l.png);
   background-repeat: no-repeat;
   -webkit-transition: top 1s;
   transition: top 1s;
 }
 
-section#main-door.banner-active .banner-text-l {
-  top: 50%;
+section#main-door .text-banner .banner-text-r {
+  position: absolute;
+  left: 396px;
+  top: 1500px;
+  width: 50%;
+  height: 100%;
+  background-image: url(../img/main/img_intro_txt_r.png);
+  background-repeat: no-repeat;
+  -webkit-transition: top 1s;
+  transition: top 1s;
 }
 
-section#main-door.banner-active .banner-text-r {
-  top: 50%;
+section#main-door .text-banner.banner-active .banner-text-l {
+  top: 0px;
 }
 
-section#main-door.banner-move .banner-text-l {
-  top: 15%;
+section#main-door .text-banner.banner-active .banner-text-r {
+  top: 0px;
 }
 
-section#main-door.banner-move .banner-text-r {
-  top: 15%;
+section#main-door .text-banner.banner-move {
+  top: 130px;
+}
+
+section#main-door .actor-1 {
+  position: absolute;
+  background-image: url(../img/main/img_intro_model01.png);
+  width: 1176px;
+  height: 589px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  top: 1500px;
+  -webkit-transition: top 1s;
+  transition: top 1s;
+}
+
+section#main-door .actor-1.actor-active {
+  top: 400px;
 }
 /*# sourceMappingURL=index.css.map */
