--- a/Jungle-Academy/portfolio1/css/index.scss
+++ b/Jungle-Academy/portfolio1/css/index.scss
@@ -50,70 +50,95 @@ section#main-door {
       left:50%;
     }
   }
+}
+
+section#main-door {
 
   @keyframes logo { //효과 적용안됌
-    from {width:0; height:0;}
-    to {width: 100%; height: 100%;}
+    from {width: 0%;}
+    to {width: 100%;}
   }
 
   .logo {
     position: absolute;
     top: 5%;
     left: 50%;
-    background-image: url(img/hero/img_logo.png);
-    background-repeat: no-repeat;
     transform: translateX(-50%);
     display: block;
     width: 180px;
     height: 80px;
 
-    // &:before {
-    //   content: url(img/hero/img_logo.png);
-    //   display: block;
-    //   animation-name: logo;
-    //   animation-duration: .5s;
-    //   width: 0px;
-    //   height: 0px;
-    // }
+    &:after {
+      content: url(../img/hero/img_logo.png);
+      display: block;
+      overflow: hidden;
+      animation-name: logo;
+      animation-duration: 2s;
+      animation-fill-mode: forwards;
+    }
   }
 
-  .banner-text-l {
+  .text-banner {
     position: absolute;
-    top: -25%;
-    left: 25.3%;
-    width: 50%;
-    height: 100%; //80
-    background-image: url(/Practice-2019/Jungle-Academy/portfolio1/img/main/img_intro_txt_l.png);
-    background-repeat: no-repeat;
-    transition: top 1s;
-  }
-
-  .banner-text-r {
-    position: absolute;
+    top: 40%;
     left: 50%;
-    top: 100%;
-    width: 50%;
-    height: 100%; //41.2
-    background-image: url(/Practice-2019/Jungle-Academy/portfolio1/img/main/img_intro_txt_r.png);
-    background-repeat: no-repeat;
+    transform: translateX(-50%);
+    width: 792px;
+    height: 162px;
     transition: top 1s;
-  }
-  
-  &.banner-active {
-    .banner-text-l {
-      top: 50%;
-    }
-    .banner-text-r {
-      top: 50%;
-    }
-  }
 
-  &.banner-move {
+    
     .banner-text-l {
-      top: 15%;
+      position: absolute;
+      top: -1500px;
+      left: 0px;
+      width: 50%;
+      height: 100%;
+      background-image: url(../img/main/img_intro_txt_l.png);
+      background-repeat: no-repeat;
+      transition: top 1s;
     }
+
     .banner-text-r {
-      top: 15%;
+      position: absolute;
+      left: 396px;
+      top: 1500px;
+      width: 50%;
+      height: 100%;
+      background-image: url(../img/main/img_intro_txt_r.png);
+      background-repeat: no-repeat;
+      transition: top 1s;
+    }
+    
+    &.banner-active {
+      .banner-text-l {
+        top: 0px;
+      }
+      .banner-text-r {
+        top: 0px;
+      }
+    }
+
+    &.banner-move {
+      top: 130px;
+    }
+  }
+}
+
+section#main-door {
+  .actor-1 {
+    position: absolute;
+    background-image: url(../img/main/img_intro_model01.png);
+    width: 1176px;
+    height: 589px;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 1500px;
+    transition: top 1s;
+
+    &.actor-active{
+      top: 400px;
+
     }
   }
 }
